# bevy_assets_hmr

./: .gitignore  Cargo.toml  README.md  bevy_assets_hmr 改进计划检查清单.md
.github/workflows/: ci.yml
assets/data/: config.ron  invalid_test.ron  npc.ron
benches/: diff_baseline.rs
bevy_assets_hmr_derive/: Cargo.toml
bevy_assets_hmr_derive/src/: lib.rs
examples/: asset_loader_compat.rs  asset_loader_viewer.rs  basic.rs  basic_viewer.rs  bsn_asset_bind.rs  bsn_reflect_auto.rs  bsn_reflect_business.rs  config_bind.rs  dependency_cascade.rs  diff_baseline.rs  direct_mode.rs  multi_type.rs  viewer.rs
src/: asset.rs  binding.rs  core.rs  debounce.rs  dependency.rs  diff.rs  ext.rs  lib.rs  loader.rs  metrics.rs  reflect_tracker.rs  refresh.rs  registry.rs  view.rs  watcher.rs
tests/: binding_test.rs  diff_test.rs  file_recovery_test.rs  hmr_auto_watch_test.rs  hmr_core_test.rs  parallelism_test.rs  reflect_tracker_test.rs  view_sync_test.rs
