[package]
name = "bevy_assets_hmr"
version = "0.1.0"
edition = "2024"
description = "Generic HMR framework for Bevy 0.19 — hot-reload ron/json configs with targeted refresh"
license = "MIT"
authors = ["remloyal <remloyal@163.com>"]
readme = "README.md"
homepage = "https://github.com/remloyal/bevy_assets_hmr"
repository = "https://github.com/remloyal/bevy_assets_hmr"
keywords = ["bevy", "hmr", "bevy_assets_hmr", "hot-reload", "config", "ron", "json"]
categories = ["command-line-utilities"]

[features]
default = ["dev"]
# 开发模式：启用 HMR 运行时监听、diff、派发系统。
# 发布时 `--no-default-features` 可编译期禁用，零运行时开销，
# 资产正常加载但不再监听文件变更、不执行 diff、不派发事件。
dev = []

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
] }
bevy_assets_hmr_derive = { path = "./bevy_assets_hmr_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12.2"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_image",
    "bevy_color",
    "bevy_text",
    "bevy_scene",
    "bevy_state",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_ui_widgets",
    "async-io",
] }
bevy_assets_hmr = { path = "." }
bevy_asset_macros = "0.19.0"
uuid = "1"

# 临时验证 example：bsn! + AssetBind<Image> 是否可编译
[[example]]
name = "bsn_asset_bind"
path = "examples/bsn_asset_bind.rs"

# 依赖链级联示例：演示 ParentDb -> ChildDb 跨类型级联
[[example]]
name = "dependency_cascade"
path = "examples/dependency_cascade.rs"

# HMR 文件监听由消费方启用 `bevy/file_watcher` feature 实现（bevy 0.19
# 依赖 notify-debouncer-full ^0.7.0，现已可用）。本 crate 只负责
# diff + 派发 ConfigRefresh，不直接监听文件。
