[package]
name = "bevy_assets_hmr_derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for bevy_assets_hmr"
license = "MIT"
repository = "https://github.com/remloyal/bevy_assets_hmr"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
